--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body class="wrap">
-    <svg class="filter" height="200" width="155">
+    <svg xmlns="http://www.w3.org/2000/svg" class="filter" height="200" width="155">
       <polygon stroke-width="1" points="0,50 0,200 140,200 140,0 50,0" />
       <polygon class="name" />
       <text y="135">TXT</text>
