added save server

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <style>
       .wrap {
         flex-flow: row wrap;
+        position: relative;
       }
       .filter {
         filter: drop-shadow(-10px 0 2px gray);
